# geometric_modeling_ue1

./: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BSpline.cpp  BSpline.h  BSplineCurve.cpp  BSplineCurve.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  GMUebung.pro  Line.h  gmuebung.cpp
